change project from maven to gradle