@@ -1,13 +1,17 @@
 package pl.zajavka.api.controller;
 
-import jakarta.persistence.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
+import org.springframework.validation.BindException;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.servlet.ModelAndView;
+import pl.zajavka.domain.exception.NotFoundException;
 import pl.zajavka.domain.exception.ProcessingException;
+
+import java.util.Optional;
 
 @Slf4j
 @ControllerAdvice
@@ -15,30 +19,42 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
     public ModelAndView handleException(Exception ex) {
-        String message = "Unexpected exception occurred: [%s]".formatted(ex.getMessage());
+        String message = String.format("Other exception occurred: [%s]", ex.getMessage());
         log.error(message, ex);
-        ModelAndView modelAndView = new ModelAndView("error");
-        modelAndView.addObject("errorMessage", message);
-        return modelAndView;
+        ModelAndView modelView = new ModelAndView("error");
+        modelView.addObject("errorMessage", message);
+        return modelView;
     }
 
-    @ExceptionHandler(EntityNotFoundException.class)
+    @ExceptionHandler(NotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    public ModelAndView handleException(EntityNotFoundException ex) {
-        String message = "Could not find a resource: [%s]".formatted(ex.getMessage());
+    public ModelAndView handleNoResourceFound(NotFoundException ex) {
+        String message = String.format("Could not find a resource: [%s]", ex.getMessage());
         log.error(message, ex);
-        ModelAndView modelAndView = new ModelAndView("error");
-        modelAndView.addObject("errorMessage", message);
-        return modelAndView;
+        ModelAndView modelView = new ModelAndView("error");
+        modelView.addObject("errorMessage", message);
+        return modelView;
     }
 
     @ExceptionHandler(ProcessingException.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ModelAndView handleException(ProcessingException ex) {
-        String message = "Could not find a resource: [%s]".formatted(ex.getMessage());
+        String message = String.format("Processing exception occurred: [%s]", ex.getMessage());
         log.error(message, ex);
-        ModelAndView modelAndView = new ModelAndView("error");
-        modelAndView.addObject("errorMessage", message);
-        return modelAndView;
+        ModelAndView modelView = new ModelAndView("error");
+        modelView.addObject("errorMessage", message);
+        return modelView;
+    }
+
+    @ExceptionHandler(BindException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ModelAndView handleException(BindException ex) {
+        String message = String.format("Bad request for field: [%s], wrong value: [%s]",
+            Optional.ofNullable(ex.getFieldError()).map(FieldError::getField).orElse(null),
+            Optional.ofNullable(ex.getFieldError()).map(FieldError::getRejectedValue).orElse(null));
+        log.error(message, ex);
+        ModelAndView modelView = new ModelAndView("error");
+        modelView.addObject("errorMessage", message);
+        return modelView;
     }
 }
